<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/action_records"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_records" />
    <item
        android:id="@+id/action_coach"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_coach" />
    <item
        android:id="@+id/action_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
